reset game without timer  reset

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         	<span id="moves" class="moves"></span> Moves
 
-            <div class="restart">
+            <div id="restart" class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
         </section>
