removing star functionality

--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
 
         <section class="score-panel">
             <div class="left">
-            	<ul class="stars">
-            		<li><i class="fa fa-star"></i></li>
-            		<li><i class="fa fa-star"></i></li>
-            		<li><i class="fa fa-star"></i></li>
-            	</ul>
+            	<ul id="stars" class="stars"></ul>
 
             	<div>
                     <span id="moves" class="moves"></span> Moves
