--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
         </section>
 
         <ul id="deck" class="deck"></ul>
+        <div id="simpleModal" class="modal">
+            <div class="modal-content">
+                <span class="closeBtn">&times;</span>
+                <p id="modalText"></p>
+            </div>
+        </div>
     </div>
 
     <script src="js/app.js"></script>
