play again button handling

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
         <div id="simpleModal" class="modal">
             <div class="modal-content">
                 <span class="closeBtn">&times;</span>
-                <p id="modalText"></p>
+                <h1 class="modal-text">Congratulations! You Won!</h1>
+                <p id="modalText" class="modal-text"></p>
+                <div class="playAgain">
+                    <button class="playAgainBtn"><span class="modal-text">Play again!</span></button>
+                </div>
             </div>
         </div>
     </div>
