--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="container">
         <header>
-            <h1>Matching Game</h1>
+            <h1 class="title">Matching Game</h1>
         </header>
 
         <section class="score-panel">
@@ -32,7 +32,11 @@
             </div>
         </section>
 
-        <ul id="deck" class="deck"></ul>
+        <section class="deck-panel">
+             <ul id="deck" class="deck"></ul>
+        </section>
+
+
         <div id="simpleModal" class="modal">
             <div class="modal-content">
                 <span class="closeBtn">&times;</span>
